# tic-tac-toe

./: .gitignore
game/: .gitignore  Cargo.toml  Justfile
game-client/: Cargo.toml  Justfile
game-client/src/: lib.rs
game-client/src/javascript/: bindings.rs
game-client/src/meta/: ui.rs
game-client/src/network/: socket_plugin.rs
game-client/static_server/: index.html
game-server/: Cargo.toml
game-server/src/: main.rs
game/src/network/: mod.rs  socket_plugin.rs
messages/: Cargo.toml  build.rs
messages/src/: game.proto  lib.rs
