[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
futures-util = { version = "0.3.31",  default-features = false, features = ["sink", "std"] }
mime = "0.3.17"
tokio-util = "0.7.13"
prost = "0.13.5"
messages = { path = "../messages"}